--- a/ARIMAmodel.ipynb
+++ b/ARIMAmodel.ipynb
@@ -361,23 +361,8 @@
       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
      ]
     },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/statespace/sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-stationary starting autoregressive parameters'\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/statespace/sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-invertible starting MA parameters found.'\n"
-     ]
-    }
-   ],
+    
+   ,
    "source": [
     "#Let's try adding a ma(1) component to the model\n",
     "model_111 = ARIMA(data['price'], order = (1,1,1))\n",
@@ -393,21 +378,7 @@
    "id": "496fc5f2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "/Users/maximilianolineiro/.pyenv/versions/3.11.0/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
-     ]
+   
     },
     {
      "data": {
@@ -432,7 +403,7 @@
     "ax = fig.add_subplot(111)\n",
     "ax.plot(train.index, train, label='Training Set')\n",
     "ax.plot(test.index, test, label='Test Set')\n",
-    "ax.plot(test.index, predicted, label='Predictions')  # Utiliza test.index para las predicciones\n",
+    "ax.plot(test.index, predicted, label='Predictions')  ,
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel('Value')\n",
     "ax.set_title('Training Set, Test Set, and Predictions')\n",
